# X-One-Pipeline

./: .gitignore  README.md  README_CN.md  README_XONE.md  README_XONE_CN.md  check_action_range.py  check_frame_num.py  collect_visual.py  collect_vusual.py  convert2act_hdf5.py  ls_id_beta.npy  old_format2robotwin.py  pyproject.toml  read_hdf5.py  read_hdf5_structure.py  read_pkl.py  real1_walled.stcm  replay_robotwin.md  replay_robotwin.py  requirements.txt  start_master.sh  start_slave.sh  trans_data.py  usb_test.py
config/: README.md  _GLOBAL_CONFIG.py  demo.yml  dual_test_robot.yml  dual_x_arm.yml  robot_2_model_infer.yml  x-one-hand.yml  x-one-master.yml  x-one-mobile.yml  x-one-no-camera.yml  x-one-piper-master.yml  x-one-piper-orbbec.yml  x-one-piper-realsense.yml  x-one-piperX-master.yml  x-one-piperX-orbbec.yml  x-one-x5-master.yml  x-one-x5-orbbec.yml  x-one-x5.yml  x-one.yml
config/collect/: collect-30hz.yml  collect_sample.yml
config/robot/: dual_test_robot.yml  x-one-master.yml  x-one.yml
example/collect/: collect.py  collect_node.py
example/deploy/: deploy.py  deploy_bak.py  deploy_origin.py  offline_eval.py
example/task/: parallel_task.py  serial_task.py
example/teleop/: master_slave_arm_teleop.py  master_slave_arm_teleop_fs.py  master_slave_node.py
hardware/controller/: TestArm_controller.py  TestMobile_controller.py  Y1_controller.py  arm_controller.py  controller.py  dexhand_controller.py  (+1 more)
my_robot/: dual_x_arm.py  test_robot.py  xspark_robot.py  xspark_robot_node.py
pipeline/: _collect_node.py  collect.py  collect_node.py  collect_teleop_master.py  collect_teleop_slave.py  deploy.py  deploy_local.py  replay.py  rerun_visual.py  reset.py  simple_teleop_protocol.py  test_deploy.py  vis_data.py
policy_lab/: setup_policy_server.py
scripts/: _test_client.sh  _test_collect_node.sh  _test_master.sh  _test_server.sh  _test_slave.sh  clean_raw_data.py  clear_can_err.sh  client.py  client_async.py  collect.sh  collect_moving_ckpt.py  collect_node_test.sh  collect_teleop.sh  collect_test.sh  collect_visual.py  collect_visual_reset.py  collect_vusual.py  convert2act_hdf5.py  convert2origin.py  convert2rdt_hdf5.py  convert2x_one.py  data_show.py  deploy_local.sh  install.sh  read_rdt_data.py  replay.sh  reset.sh  server.py  set_zero_state.sh  setup_pedal.sh  test_client.sh  test_controller.py  test_deploy.sh  test_server.sh  test_slave.sh  vis_data.sh  vis_data_batch.sh  visual_hdf5_rerun.py
task_info/: demo_task.json  meituanbox.json
tools/: cali_cv_sensor.py  calibrate_orbbec_color.py  can_multi_activate.sh  capture_orbbec_snapshots.py  orbbec_serial.py  pedal_test.py  read_hdf5.py  scan_camera.py  set_camera_rules.py  set_usb_rules.py  setup_haptron_sensor.py  setup_pedal.sh  transform2xspark.py  tune_orbbec_color_gui.py  vis_video.py
(+145 files in other folders)
