[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "1.0"
description = "Xspark AI open source repo"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "tqdm",
    "scipy",
    "numpy",
    "h5py",
    "pyrealsense2",
    "opencv-python",
    "keyboard",
    "pyyaml",
    "seaborn",
    "seaborn",
]

[project.urls]
Repository = "https://github.com/XsparkAI/X-One-Pipeline"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "policy"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["src", "scripts", "pipeline"]
